gif link sending

--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -372,4 +372,5 @@
     <string name="confirm_logout_title">Logout?</string>
     <string name="could_not_record_audio">Could not record audio, is the microphone permission enabled?</string>
     <string name="remove_title_right">Remove</string>
+    <string name="could_not_send_gif_link">surespot could not send GIF link.</string>
 </resources>
