--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -374,5 +374,5 @@
     <string name="remove_title_right">Remove</string>
     <string name="could_not_send_gif_link">surespot could not send GIF link.</string>
     <string name="powered_by_giphy">POWERED BY GIPHY</string>
-    <string name="search_gifs">Search GIFs</string>
+    <string name="search_gifs">Search GIPHY</string>
 </resources>
