--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -375,4 +375,5 @@
     <string name="could_not_send_gif_link">surespot could not send GIF link.</string>
     <string name="search_gifs">Search GIPHY</string>
     <string name="no_GIFS_found">No GIFs found</string>
+    <string name="gif">GIF</string>
 </resources>
