--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -382,4 +382,6 @@
     <string name="no_recently_used_gifs">No recently used GIFs.</string>
     <string name="send_file">Send file</string>
     <string name="select_file">Select file</string>
+    <string name="mute">Mute</string>
+    <string name="unmute">Unmute</string>
 </resources>
