Return to toggle between keyboard and gif in preparation for streamlining.

--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -373,7 +373,7 @@
     <string name="could_not_record_audio">Could not record audio, is the microphone permission enabled?</string>
     <string name="remove_title_right">Remove</string>
     <string name="could_not_send_gif_link">surespot could not send GIF link.</string>
-    <string name="search_gifs">Search GIPHY</string>
+    <string name="search_gifs">Search for GIFs</string>
     <string name="no_GIFS_found">No GIFs found</string>
     <string name="gif">GIF</string>
     <string name="gif_terms">"HIGH FIVE:CLAPPING:THUMBS UP:NO:YES:YOU'RE WELCOME:SHRUG:MIC DROP:SORRY:CHEERS:THANK YOU:WINK:ANGRY:NERVOUS:DUH:OOPS:HUNGRY:HUGS:WOW:BORED:GOODNIGHT:AWKWARD:AWW:PLEASE:YIKES:OMG:BYE:WAITING:EYEROLL:IDK:KITTIES:PUPPIES:LOSER:COLD:PARTY:AGREE:DANCE:EXCUSE ME:WHAT:STOP:SLEEPY:CREEP:JK:SCARED:CHILL OUT:MISS YOU:DONE"</string>
