--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -385,7 +385,6 @@
     <string name="unmute">Unmute</string>
     <string name="pref_title_download_gifs">GIF links</string>
     <string name="pref_summary_download_gifs">Automatically download GIF links</string>
-
-
-
+    <string name="confirm_image_send">Are you sure you wish to send this image to %s?</string>
+    <string name="pref_title_confirm_image_send">Confirm image send</string>
 </resources>
