--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -387,4 +387,5 @@
     <string name="pref_summary_download_gifs">Automatically download GIF links</string>
     <string name="confirm_image_send">Are you sure you wish to send this image to %s?</string>
     <string name="pref_title_confirm_image_send">Confirm image send</string>
+    <string name="close_all_tabs">Close all tabs</string>
 </resources>
