--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -388,4 +388,5 @@
     <string name="confirm_image_send">Are you sure you wish to send this image to %s?</string>
     <string name="pref_title_confirm_image_send">Confirm image send</string>
     <string name="close_all_tabs">Close all tabs</string>
+    <string name="pref_giphy_search_language_title">GIPHY Search Language...</string>
 </resources>
