--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -389,4 +389,5 @@
     <string name="pref_title_confirm_image_send">Confirm image send</string>
     <string name="close_all_tabs">Close all tabs</string>
     <string name="pref_giphy_search_language_title">GIPHY Search Language...</string>
+    <string name="channel_name">General</string>
 </resources>
