RECORD_AUDIO permission for sending voice messages.

--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -395,4 +395,5 @@
     <string name="need_mic_permission">surespot needs Microphone permission to record audio for voice messages.</string>
     <string name="need_camera_permission">surespot needs Camera permission to take pictures.</string>
     <string name="need_storage_permission_gallery">surespot needs Storage permission to access photos.</string>
+    <string name="disable_voice_messaging_permission">Do you wish to disable voice messaging?\n(You can always re-enable in identity options in surespot settings).</string>
 </resources>
