--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -396,4 +396,5 @@
     <string name="need_camera_permission">surespot needs Camera permission to take pictures.</string>
     <string name="need_storage_permission_gallery">surespot needs Storage permission to access photos.</string>
     <string name="disable_voice_messaging_permission">Do you wish to disable voice messaging?\n(You can always re-enable in identity options in surespot settings).</string>
+    <string name="need_storage_permission_save_to_gallery">surespot needs Storage permission to save photos.</string>
 </resources>
