Added string for password_changed_past_backups (de)

--- a/surespot/src/main/res/values-de/strings.xml
+++ b/surespot/src/main/res/values-de/strings.xml
@@ -196,6 +196,7 @@
   <string name="change_password_progress">Passwort wird geändert</string>
   <string name="could_not_change_password">Passwort konnte nicht geändert werden</string>
   <string name="password_changed">Passwort wurde geändert, bitte erneut Backup erstellen</string>
+  <string name="password_changed_past_backups">Frühere Sicherungen funktionieren weiterhin mit dem alten Kennwort.</string>
   <string name="delete">löschen</string>
   <string name="delete_identity_progress">Profil löschen</string>
   <string name="could_not_delete_identity">Profil konnte nicht gelöscht werden</string>
