Added string for password_changed_past_backups (fr)

--- a/surespot/src/main/res/values-fr/strings.xml
+++ b/surespot/src/main/res/values-fr/strings.xml
@@ -187,6 +187,7 @@
     <string name="change_password_progress">changement du mot de passe</string>
     <string name="could_not_change_password">impossible de changer le mot de passe</string>
     <string name="password_changed">mot de passe changé, veuillez sauvegarder l\'identité</string>
+    <string name="password_changed_past_backups">Les sauvegardes antérieures fonctionneront toujours avec l\'ancien mot de passe.</string>
     <string name="delete">supprimer</string>
     <string name="delete_identity_progress">supression de l\'identité</string>
     <string name="could_not_delete_identity">impossible de supprimer l\'identité</string>
